--- a/SandboxApril17.csproj
+++ b/SandboxApril17.csproj
@@ -86,11 +86,14 @@
   <ItemGroup>
     <Compile Include="Assets\scripts\actions\Action.cs" />
     <Compile Include="Assets\scripts\actions\CommandSet.cs" />
+    <Compile Include="Assets\scripts\actions\Formulas.cs" />
+    <Compile Include="Assets\scripts\actions\SlowAction.cs" />
+    <Compile Include="Assets\scripts\actions\executors\NightSword.cs" />
+    <Compile Include="Assets\scripts\actions\executors\StasisSword.cs" />
     <Compile Include="Assets\scripts\commands\Attack.cs" />
     <Compile Include="Assets\scripts\commands\BasicSkill.cs" />
     <Compile Include="Assets\scripts\commands\BlackMagic.cs" />
     <Compile Include="Assets\scripts\commands\Charge.cs" />
-    <Compile Include="Assets\scripts\commands\DarkSword.cs" />
     <Compile Include="Assets\scripts\commands\HolySword.cs" />
     <Compile Include="Assets\scripts\commands\Statics.cs" />
     <Compile Include="Assets\scripts\data\CombatManager.cs" />
@@ -99,7 +102,6 @@
     <Compile Include="Assets\scripts\data\InputManager.cs" />
     <Compile Include="Assets\scripts\data\MapCursor.cs" />
     <Compile Include="Assets\scripts\data\SettingsManager.cs" />
-    <Compile Include="Assets\scripts\data\SlowAction.cs" />
     <Compile Include="Assets\scripts\data\SoundManager.cs" />
     <Compile Include="Assets\scripts\data\Waypoint.cs" />
     <Compile Include="Assets\scripts\environmental\LightningFlash.cs" />
@@ -115,6 +117,7 @@
     <Compile Include="Assets\scripts\menu options\CommandSet_MenuOption.cs" />
     <Compile Include="Assets\scripts\menu options\Execute_MenuOption.cs" />
     <Compile Include="Assets\scripts\menu options\Move_MenuOption.cs" />
+    <Compile Include="Assets\scripts\menu options\NoExecute_MenuOption.cs" />
     <Compile Include="Assets\scripts\menu options\Wait_MenuOption.cs" />
     <Compile Include="Assets\scripts\misc\Bounce.cs" />
     <Compile Include="Assets\scripts\misc\JsonHelper.cs" />
