--- a/SandboxApril17.csproj
+++ b/SandboxApril17.csproj
@@ -90,11 +90,11 @@
     <Compile Include="Assets\scripts\actions\SlowAction.cs" />
     <Compile Include="Assets\scripts\actions\executors\NightSword.cs" />
     <Compile Include="Assets\scripts\actions\executors\StasisSword.cs" />
+    <Compile Include="Assets\scripts\actions\executors\ThrowStone.cs" />
     <Compile Include="Assets\scripts\commands\Attack.cs" />
     <Compile Include="Assets\scripts\commands\BasicSkill.cs" />
     <Compile Include="Assets\scripts\commands\BlackMagic.cs" />
     <Compile Include="Assets\scripts\commands\Charge.cs" />
-    <Compile Include="Assets\scripts\commands\HolySword.cs" />
     <Compile Include="Assets\scripts\commands\Statics.cs" />
     <Compile Include="Assets\scripts\data\CombatManager.cs" />
     <Compile Include="Assets\scripts\data\Element.cs" />
